--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -5,16 +5,14 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-        <link href="https://fonts.googleapis.com/css?family=Lily+Script+One&effect=canvas-print" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Lily+Script+One" rel="stylesheet" type="text/css">
       </head>
       <body>
           <div class="page-header">
-            <div class="font-effect-canvas-print">
               {% if user.is_authenticated %}
               <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
               {% endif %}
               <h1><a href="/">Anna's Blog</a></h1>
-              </div>
           </div>
           <div class="content container">
               <div class="row">
